fix banner image avatar overflow

--- a/app/webpacker/stylesheets/index.scss
+++ b/app/webpacker/stylesheets/index.scss
@@ -383,7 +383,7 @@ label.list__item {
 }
 
 .banner-image--small {
-  padding-top: 10%;
+  padding-top: 100px;
 }
 
 .banner-image__inner {
